src/test/resources/parser/valid/divisionNum.sbsc
// Test division

println(str(4.0 / 2.0));