src/test/resources/parser/invalid/badStringCast.sbsc
// parser should error at invalid cast.

println(str("test"));